# tutorials

./: .codecov.yml  .gitignore  .jupytext.yml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.actions/: README.md  assistant.py  data-download.sh  filter-folders.py  generate-ipynb.sh  git-diff-sync.sh  git-diff.sh  helpers.py  ipynb-generate.sh  ipynb-render.sh  ipynb-test.sh  parse-requirements.py  render-ipynb.sh  requirements.txt  requires.txt  test_cli.py
.azure/: docker-build.yml  ipynb-publish.yml  ipynb-tests.yml  ipynb-validate.yml
.azure-pipelines/: ipynb-publish.yml  ipynb-tests.yml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  label-change.yml  labeler.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: block_nonpub.yml  cd_publish.yml  ci_block-ipybn.yml  ci_block-pub.yml  ci_checks.yml  ci_code-format.yml  ci_docs.yml  ci_internal.yml  ci_schema.yml  ci_test-acts.yml  ci_testing.yml  code-format.yml  docker-build.yml  docs-deploy.yml  nightly_docs.yml  pub_notebooks.yml
.notebooks/: README.md  sample-template.ipynb  sample-template.yaml  template.ipynb  template.yaml
.notebooks/course_UvA-DL/: 01-introduction-to-pytorch.ipynb  01-introduction-to-pytorch.yaml  02-activation-functions.ipynb  02-activation-functions.yaml  03-initialization-and-optimization.ipynb  03-initialization-and-optimization.yaml  04-inception-resnet-densenet.ipynb  04-inception-resnet-densenet.yaml  05-transformers-and-MH-attention.ipynb  05-transformers-and-MH-attention.yaml  06-graph-neural-networks.ipynb  06-graph-neural-networks.yaml  07-deep-energy-based-generative-models.ipynb  07-deep-energy-based-generative-models.yaml  08-deep-autoencoders.ipynb  08-deep-autoencoders.yaml  09-normalizing-flows.ipynb  09-normalizing-flows.yaml  10-autoregressive-image-modeling.ipynb  10-autoregressive-image-modeling.yaml  11-vision-transformer.ipynb  11-vision-transformer.yaml  12-meta-learning.ipynb  12-meta-learning.yaml  13-contrastive-learning.ipynb  13-contrastive-learning.yaml  activation-functions.ipynb  autoregressive-image-modeling.ipynb  autoregressive-image-modeling.yaml  contrastive-learning.ipynb  deep-autoencoders.ipynb  deep-autoencoders.yaml  deep-energy-based-generative-models.ipynb  deep-energy-based-generative-models.yaml  graph-neural-networks.ipynb  graph-neural-networks.yaml  inception-resnet-densenet.ipynb  introduction-to-pytorch.ipynb  meta-learning.ipynb  meta-learning.yaml  (+5 more)
.notebooks/flash_tutorials/: electricity_forecasting.ipynb  electricity_forecasting.yaml  image_classification.ipynb  image_classification.yaml  tabular_classification.ipynb  tabular_classification.yaml  text_classification.ipynb  text_classification.yaml
.notebooks/lightning_examples/: augmentation_kornia.ipynb  augmentation_kornia.yaml  barlow-twins.ipynb  barlow-twins.yaml  basic-gan.ipynb  basic-gan.yaml  cifar10-baseline.ipynb  cifar10-baseline.yaml  datamodules.ipynb  datamodules.yaml  finetuning-scheduler.ipynb  finetuning-scheduler.yaml  mnist-hello-world.ipynb  mnist-hello-world.yaml  mnist-tpu-training.ipynb  mnist-tpu-training.yaml  reinforce-learning-DQN.ipynb  reinforce-learning-DQN.yaml  text-transformers.ipynb  text-transformers.yaml  warp-drive.ipynb  warp-drive.yaml
.notebooks/templates/: img-classify.ipynb  img-classify.yaml  simple.ipynb  simple.yaml  titanic.ipynb
_dockers/: README.md
_dockers/ubuntu-cuda/: Dockerfile
_docs/source/: conf.py
_requirements/: base.txt  default.txt  devel.txt  docs.txt  test.txt
basic/: mnist-hello-world.py
basic/mnist-hello-world/: .meta.yml  mnist-hello-world.py
course_UVA-DL/graph-neural-networks/: GNN_overview.py
course_UvA-DL/: requirements.txt
course_UvA-DL/01-introduction-to-pytorch/: .meta.yml  Introduction_to_PyTorch.py  notebook.py  requirements.txt
course_UvA-DL/02-activation-functions/: .meta.yml  Activation_Functions.py  notebook.py
course_UvA-DL/03-initialization-and-optimization/: .meta.yml  Initialization_and_Optimization.py  notebook.py
course_UvA-DL/04-inception-resnet-densenet/: .meta.yaml  Inception_ResNet_DenseNet.py  notebook.py  requirements.txt
course_UvA-DL/05-transformers-and-MH-attention/: .meta.yml  MHAttention.py  Transformers_MHAttention.py
course_UvA-DL/06-graph-neural-networks/: .meta.yml  GNN_overview.py  overview.py  requirements.txt
course_UvA-DL/07-deep-energy-based-generative-models/: .meta.yml  Deep_Energy_Models.py  notebook.py  requirements.txt
course_UvA-DL/08-deep-autoencoders/: .meta.yml  Deep_Autoencoders.py  notebook.py
course_UvA-DL/09-normalizing-flows/: .meta.yml  NF.py  NF_image_modeling.py  requirements.txt
course_UvA-DL/10-autoregressive-image-modeling/: .meta.yml  Autoregressive_Image_Modeling.py  notebook.py  requirements.txt
course_UvA-DL/11-vision-transformer/: .meta.yml  VT.py  Vision_Transformer.py  requirements.txt
course_UvA-DL/12-meta-learning/: .meta.yml  Meta_Learning.py  notebook.py  requirements.txt
course_UvA-DL/13-contrastive-learning/: .meta.yml  SimCLR.py  requirements.txt
course_UvA-DL/activation-functions/: .meta.yml  Activation_Functions.py
course_UvA-DL/autoregressive-image-modeling/: .meta.yml  Autoregressive_Image_Modeling.py
course_UvA-DL/contrastive-learning/: .meta.yml  SimCLR.py
course_UvA-DL/deep-autoencoders/: .meta.yml  Deep_Autoencoders.py
course_UvA-DL/deep-energy-based-generative-models/: .meta.yml  Deep_Energy_Models.py
course_UvA-DL/graph-neural-networks/: .meta.yml  GNN_overview.py
course_UvA-DL/inception-resnet-densenet/: .meta.yaml  Inception_ResNet_DenseNet.py
course_UvA-DL/initialization-and-optimization/: .meta.yml  Initialization_and_Optimization.py
course_UvA-DL/meta-learning/: .meta.yml  (+1 more)
docs/: .buildinfo  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js
lightning_examples/: requirements.txt
requirements/: data.txt  default.txt  devel.txt
sample-template/: .meta.yml  template.py
template/: .meta.yml  template.py
(+203 files in other folders)
