[tool:pytest]
norecursedirs =
    .git
    .github
    dist
    build
addopts =
    --strict
    --doctest-modules
    --color=yes
    --nbval-cell-timeout=300

[coverage:report]
exclude_lines =
    pragma: no-cover
    pass


[flake8]
max-line-length = 120
exclude =
    *.egg
    build
    temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore =
    E501  # line too long


# setup.cfg or tox.ini
[check-manifest]
ignore =
    *.yml
    .github
    .github/*


[metadata]
license_file = LICENSE
description-file = README.md
# long_description = file:README.md
# long_description_content_type = text/markdown


[isort]
line_length = 100
order_by_type = False
# 3 - Vertical Hanging Indent
multi_line_output = 3
include_trailing_comma = True


[yapf]
based_on_style = pep8
spaces_before_comment = 2
split_before_logical_operator = true
split_before_arithmetic_operator = true
COLUMN_LIMIT = 110
COALESCE_BRACKETS = true
DEDENT_CLOSING_BRACKETS = true
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
NO_SPACES_AROUND_SELECTED_BINARY_OPERATORS = false
DISABLE_ENDING_COMMA_HEURISTIC = false
