[tool:pytest]
norecursedirs =
    .git
    .github
    dist
    build
addopts =
    --strict
    --doctest-modules
    --color=yes
    --nbval-cell-timeout=300

[coverage:report]
exclude_lines =
    pragma: no-cover
    pass


[flake8]
max-line-length = 120
exclude =
    *.egg
    build
    temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore =
    E501  # line too long
    E203  # whitespace before ':'


# setup.cfg or tox.ini
[check-manifest]
ignore =
    *.yml
    .github
    .github/*


[metadata]
license_file = LICENSE
description-file = README.md
# long_description = file:README.md
# long_description_content_type = text/markdown
